$Id: History,v 1.27 2000-12-14 10:39:44 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Dec 14 2000, G.Cosmo (run-V02-00-06)
- Updated date to G4RunManager.cc for public release 3.0.

Nov 19 2000, M.Asai (run-V02-00-05)
- Another fix to G4VUserPhysicsList (H.K)

Nov 16 2000, M.Asai (run-V02-00-04)
- Fixes a bug in G4VUserPhysicsList (H.K)

Nov 16 2000, M.Asai (run-V02-00-03)
- Add G4VModularPhysicsList and G4VPhysicsConstructor 
  to modularize UserPhysicsList   (H.K)

Nov 13 2000, M.Asai (run-V02-00-02)
- Introducing a capability of storing random number status file to other directory

Nov 9 2000, M.Asai (run-V02-00-01)
- add Retrieve/StorePhysicsTable and related methods 
  in G4VUserPhysicsList and modify BuildPhysicsTable method  (H.K.)
- add store/retreivePhysicsTable command in G4UserPhysicsListMessenger (H.K.) 
 
Jul 22 2000, M.Asai (run-V02-00-00)
- Modify G4RunManager and G4RunMessenger because of elimination of
  G4StateManager::Pause() and introducing new G4UImanager as state
  dependent class.

Dec 2 99, M.Asai (run-V00-01-04)
- G4RunManager displays the version number when it is constructed.

Nov 7 99, H.Kurashige (run-V00-01-03)
-  Comments are enriched for software reference manual.

